[package]
name = "rusimeta"
version = "0.1.0"
authors = ["daniel.ford <fordjdan.git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
kamadak-exif = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

[dev-dependencies]
serial_test = "*"
